<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">jemis_s_application2</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="msg_already_have_an">Already have an account?</string>
    <string name="msg_enter_your_email">Enter your email</string>
    <string name="msg_i_agree_to_the_medidoc">I agree to the medidoc Terms of Service
and Privacy Policy</string>
    <string name="msg_enter_your_password">Enter your password</string>
    <string name="lbl_sign_up">Sign Up</string>
    <string name="lbl_enter_your_name">Enter your name</string>
    <string name="lbl_log_in">Log In</string>
</resources>
